css/app.css
.navbar {
  background-color: #024959;
}

.navbar .navbar-brand {
  background-color: azure;
}

.navbar .navbar-burger {
  color: #FFF;
}

.navbar .navbar-link {
  color: #FFF;
}

.navbar .navbar-item.has-dropdown.is-active .navbar-link,
.navbar .navbar-item.has-dropdown:focus .navbar-link,
.navbar .navbar-item.has-dropdown:hover .navbar-link {
  background-color: #013540;
}

.navbar .navbar-link:not(.is-arrowless)::after {
  border-color: #fbfbfb;
}

.navbar-link.is-active,
.navbar-link:focus,
.navbar-link:focus-within,
.navbar-link:hover,
a.navbar-item.is-active,
a.navbar-item:focus,
a.navbar-item:focus-within,
a.navbar-item:hover {
  background-color: #024959;
}

@media screen and (min-width: 1024px) {
  .navbar-start {
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    margin-right: auto;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    width: 100%;
  }
}

.carousel .carousel-items .carousel-item .hero .hero-body {
  margin: 0px;
  padding: 0px;
  min-width: 100vw;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.carousel .indicator-item.is-active .indicator-style,
.carousel .indicator-item .indicator-style:hover {
  background: #024959 !important;
  border: 1px solid #FFF !important;
}

.carousel .indicator-item .indicator-style {
  background: #FFF !important;
  border: 1px solid #024959 !important;
}

.carousel .carousel-arrow .icon {
  background: #fff;
  color: #024959;
  cursor: pointer;
  border: 1px solid #FFF;
  border-radius: 290486px;
  outline: 0;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background-color: #cbdad4;
  min-height: 100vh;
  width: 100vw;
}

#app {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  width: 100vw;
}

#app header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

#app .slider-casas {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

